2001-08-06  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Updated for the GNOME 2 platform.

2001-08-06  Martin Baulig  <baulig@suse.de>

	* ChangeLog-20010806: Copied current ChangeLog to ChangeLog-20010806
	and started a new ChangeLog file for GNOME 2.0.
