@@ -314,6 +314,6 @@ void		basep_border_get		(int screen,
 
 #define GNOME_PANEL_HINTS (WIN_HINTS_SKIP_FOCUS|WIN_HINTS_SKIP_WINLIST|WIN_HINTS_SKIP_TASKBAR)
 
-END_GNOME_DECLS
+G_END_DECLS
 
 #endif /* __BASEP_WIDGET_H__ */
