@@ -7,6 +7,6 @@ BEGIN_GNOME_DECLS
 
 void start_screen_check (void);
 
-END_GNOME_DECLS
+G_END_DECLS
 
 #endif
