@@ -9,7 +9,7 @@ char *		get_real_menu_path	(const char *arguments);
 char *		get_pixmap		(const char *menudir,
 					 gboolean main_menu);
 
-END_GNOME_DECLS
+G_END_DECLS
 
 #endif
 
