@@ -8,7 +8,7 @@ void rh_submenu_to_display(GtkWidget *menuw, GtkMenuItem *menuitem);
 
 #define REDHAT_MENUDIR "/etc/X11/wmconfig"
 
-END_GNOME_DECLS
+G_END_DECLS
 
 #endif
 
