@@ -8,6 +8,6 @@ void panel_menu_position (GtkMenu *menu, gint *x, gint *y, gpointer data);
 GtkWidget * add_menu_separator (GtkWidget *menu);
 int get_default_menu_flags (void) G_GNUC_CONST;
 
-END_GNOME_DECLS
+G_END_DECLS
 
 #endif
