@@ -1,5 +1,9 @@
 2001-08-06  Martin Baulig  <baulig@suse.de>
 
+	* *.h: Use G_BEGIN/END_DECLS everywhere.
+
+2001-08-06  Martin Baulig  <baulig@suse.de>
+
 	* Makefile.am: Updated for the GNOME 2 platform.
 
 2001-08-06  Martin Baulig  <baulig@suse.de>
